add Skeleton component and integrate react-loading-skeleton for loading states; update styles in MasterCard, CardInfo, Cards components for improved layout

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 @import "@fontsource/bebas-neue";
-
+@import "react-loading-skeleton/dist/skeleton.css";
 @theme {
   --color-primary: #fe0000;
   --color-secondary: #e3291f;
