agregar nueva utilidad mask-fade-bottom en index.css; ajustar diseño en Home.jsx y MasterCard.jsx para mejorar la presentación; actualizar datos de pilotos y resultados en data.json y leaderBoardPilots.json

--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,7 @@
 body {
   font-family: "Bebas Neue", sans-serif;
 }
+
+@utility mask-fade-bottom {
+  mask-image: linear-gradient(to bottom, black, 90%, transparent);
+}
